--- a/tonyClass/.vscode/launch.json
+++ b/tonyClass/.vscode/launch.json
@@ -3,6 +3,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "Main",
+      "projectName": "tonyClass_dfd0a294"
+    },
+    {
       "name": "ng serve",
       "type": "pwa-chrome",
       "request": "launch",
