lambada consulme and predicate

--- a/tonyClass/.vscode/launch.json
+++ b/tonyClass/.vscode/launch.json
@@ -4,6 +4,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Main2",
+      "request": "launch",
+      "mainClass": "Main2",
+      "projectName": "tonyClass_dfd0a294"
+    },
+    {
+      "type": "java",
       "name": "Main",
       "request": "launch",
       "mainClass": "Main",
