--- a/tonyClass/.vscode/launch.json
+++ b/tonyClass/.vscode/launch.json
@@ -4,6 +4,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Test",
+      "request": "launch",
+      "mainClass": "app.java.java_certification.modifiers.Test",
+      "projectName": "tonyClass_dfd0a294"
+    },
+    {
+      "type": "java",
       "name": "FinalMethodExample",
       "request": "launch",
       "mainClass": "app.java.java_certification.methods.outdinayConcepts.FinalMethodExample",
